# app_cli_demo

./: Cargo.toml  LICENSE  README.md  argrment.json
argrments/: Cargo.toml
argrments/src/: argument.rs  lib.rs
src/: main.rs
