[package]
name = "argrments"
version = "0.1.0"
edition = "2021"
description = "启动程序获取命令参数"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 简单配置命令行CLI菜单
getopts = "0.2"
# 配置文件反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
